Bug 80468 - FILEOPEN: Image background color not retained, defaults to blue
Summary: FILEOPEN: Image background color not retained, defaults to blue
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.1 rc
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: odf target:4.3.0 target:4.4.0
Keywords: bibisected, regression
: 79179 81223 (view as bug list)
Depends on:
Blocks: Writer-Images
  Show dependency treegraph
 
Reported: 2014-06-24 09:35 UTC by Yousuf Philips (jay) (retired)
Modified: 2017-10-22 01:20 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
the sample file (225.50 KB, application/vnd.oasis.opendocument.text)
2014-06-24 09:35 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-06-24 09:35:15 UTC
Created attachment 101660 [details]
the sample file

While testing bug 80294, i noticed that image background colors are not being retained, as can be seen in the attached file. In 4.3 the green and red backgrounds found in 4.2 are now blue. I didnt have the same problem of setting the background color in 4.3 and then opening it in 4.2.
Comment 1 Florian Reisinger 2014-06-24 13:02:40 UTC
Working:
Version: 4.2.1.1
Build-ID: d7dbbd7842e6a58b0f521599204e827654e1fb8b

Not working:
Version: 4.4.0.0.alpha0+
Build ID: bdd87b2acddb2e244569dcc8f228e270614dc59e
TinderBox: Win-x86@39, Branch:master, Time: 2014-06-23_00:37:24

Version: 4.3.0.1
Build-ID: 67f5430184326974072b65403ef1d9d934fc4481

OS: win 7 x64
Comment 2 Michael Stahl (allotropia) 2014-07-04 16:51:50 UTC
this is a regression from commit 6e61ecd09679a66060f932835622821d39e92f01
or one of the follow-ups on that.

fixed on libreoffice-4-3 by commit dc17dad5fd7509f191718df8690e5847ab87669a

still broken on master
Comment 4 Xisco Faulí 2014-07-28 09:50:08 UTC
Add 'bibisected' to whiteboard as the problematic commit has been already identified
Comment 5 Caolán McNamara 2014-09-29 15:31:04 UTC
*** Bug 81223 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2014-09-29 15:32:56 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5aa360cae0383f270c12708e7e94179a7fde6711

Resolves: fdo#80468 and fdo#81223 image/frame backgrounds wrong



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Michael Stahl (allotropia) 2014-11-12 15:22:16 UTC
*** Bug 79179 has been marked as a duplicate of this bug. ***
Comment 8 Cor Nouws 2014-11-23 14:07:52 UTC
(In reply to Commit Notification from comment #6)
> Caolan McNamara committed a patch related to this issue.
> It has been pushed to "master":

thanks - I confirm bug 84294 is fixed too.
Are you pushing this for 3.4 too, Caolán ?

Cor
Comment 9 Cor Nouws 2014-11-23 14:09:23 UTC
(In reply to Cor Nouws from comment #8)

> Are you pushing this for 3.4 too, Caolán ?

Hmm 4.3.x obviously
Comment 10 Yousuf Philips (jay) (retired) 2014-11-23 14:16:12 UTC
(In reply to Cor Nouws from comment #9)
> Hmm 4.3.x obviously

Michael mentioned in comment 2 that it was already fixed in 4.3. :D
Comment 11 Cor Nouws 2014-11-23 14:28:37 UTC
(In reply to Jay Philips from comment #10)
> (In reply to Cor Nouws from comment #9)
> > Hmm 4.3.x obviously
> 
> Michael mentioned in comment 2 that it was already fixed in 4.3. :D

thanks!
Comment 12 Robinson Tryon (qubit) 2015-12-17 08:24:17 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]