include/xmloff/XMLShapeStyleContext.hxx
@@ -37,9 +37,6 @@ protected:
     OUString     m_sListStyleName;
     bool         m_bIsNumRuleAlreadyConverted;
 
-    //UUUU
-    bool         m_bIsFillStyleAlreadyConverted : 1;
-
 protected:
     virtual void SetAttribute( sal_uInt16 nPrefixKey,
                                const OUString& rLocalName,
